@@ -4,6 +4,7 @@
   - rename Std::Array::Util copy_of_xxx to copy_xxxs
   - rename Std::Array::Util equals_xxx to eq_xxxs
   - fix windows source file reading bug
+  - inline source code must be in .inline instead of .native
 0.0325 2018-04-13
   - remove template feature
   - rename Math to Std::Math
